# CNCF-Incubating

./: README.md  repo-list.txt
modules/cloud-custodian/: .codecov.yml  .coveragerc  .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-hooks.yaml  ADOPTERS.md  Makefile  OWNERS.md  README.md  ROADMAP.md  SECURITY.md  flake.nix  pyproject.toml  test.env
modules/cloud-custodian/.github/: dependabot.yml
modules/cloud-custodian/.github/composites/docker-build-push/: action.yaml
modules/cloud-custodian/.github/composites/docs-publish/: action.yaml
modules/cloud-custodian/.github/composites/install/: action.yaml
modules/cloud-custodian/.github/workflows/: ci.yml  docker.yml  functional.yaml  release.yml
modules/cloud-custodian/c7n/: cache.py  cli.py  commands.py  config.py  credentials.py  ctx.py  cwe.py  data.py  deprecated.py  element.py  handler.py  loader.py  log.py  lookup.py  manager.py  mu.py  output.py  policy.py  provider.py  query.py  resolver.py  schema.py  structure.py  tags.py  testing.py  utils.py  varfmt.py  version.py
modules/cloud-custodian/c7n/actions/: __init__.py  autoscaling.py  autotag.py  invoke.py  metric.py  network.py  notify.py  policy.py  webhook.py
modules/cloud-custodian/c7n/filters/: __init__.py  backup.py  core.py  costhub.py  health.py  iamaccess.py  iamanalyzer.py  kms.py  metrics.py  missing.py  offhours.py  policystatement.py  related.py  vpc.py  waf.py
modules/cloud-custodian/c7n/reports/: __init__.py  csvout.py
modules/cloud-custodian/c7n/resources/: __init__.py  accessanalyzer.py  account.py  acm.py  airflow.py  ami.py  apigw.py  appelb.py  appflow.py  appmesh.py  appstream.py  appsync.py  artifact.py  asg.py  athena.py  aws.py  awslambda.py  backup.py  batch.py  bedrock.py  budgets.py  cfn.py  cloudfront.py  cloudsearch.py  cloudtrail.py  code.py  cognito.py  comprehend.py  config.py  connect.py  cw.py  datapipeline.py  datasync.py  devicefarm.py  directconnect.py  directory.py  discovery.py  dlm.py  dms.py  dynamodb.py  (+70 more)
modules/cloud-custodian/docker/: c7n  c7n-distroless  c7n-kube  c7n-kube-distroless  c7n-left  c7n-org  c7n-org-distroless  mailer  mailer-distroless  policystream  policystream-distroless
modules/cloud-custodian/docs/: Makefile.sphinx
modules/cloud-custodian/docs/source/: conf.py  contribute.rst  deployment.rst  filters.rst  index.rst
modules/cloud-custodian/docs/source/aws/: contribute.rst  gettingstarted.rst  lambda.rst  usage.rst
modules/cloud-custodian/docs/source/azure/: gettingstarted.rst
modules/cloud-custodian/docs/source/developer/: documentation.rst  installing.rst  packaging.rst  tests.rst
modules/cloud-custodian/docs/source/gcp/: contribute.rst  gettingstarted.rst
modules/cloud-custodian/docs/source/kubernetes/: controllermode.rst  gettingstarted.rst
modules/cloud-custodian/docs/source/oci/: gettingstarted.rst  testing.rst
modules/cloud-custodian/docs/source/quickstart/: advanced.rst  index.rst  policyStructure.rst
modules/cloud-custodian/tests/: apicallcaptor.py  conftest.py  test_accessanalyzer.py  test_account.py  test_airflow.py  test_ami.py  test_apigw.py  test_appelb.py  test_appflow.py  test_appmesh.py  test_appsync.py  test_asg.py  test_athena.py  test_autotag.py  test_aws.py  test_backup.py  test_batch.py  test_bedrock.py  test_budgets.py  test_cache.py  test_cfn.py  test_cli.py  test_cloudfront.py  test_cloudsearch.py  test_cloudtrail.py  test_code.py  test_cognito.py  test_comprehend.py  test_config.py  test_connect.py  test_costhub.py  test_credentials.py  test_cw_synthetics.py  test_cwa.py  test_cwe.py  test_cwl.py  test_data.py  test_datapipeline.py  test_deprecated.py  test_directory.py  (+89 more)
modules/cloud-custodian/tests/data/: arn-types.json  cfn-types.json  iam-actions.json  ram-producer-view-consumer-eni.json
modules/cloud-custodian/tests/data/config/: event-cloudsearch.json  kinesis-stream.json  rds-cluster.json  s3-from-rule-sans-accelerator.json
modules/cloud-custodian/tests/data/cwe/: event-appmesh-create-mesh.json  (+13 more)
modules/cloud-custodian/tools/c7n_awscc/: build.py  justfile  pyproject.toml  readme.md
modules/cloud-custodian/tools/c7n_azure/: pyproject.toml
modules/cloud-custodian/tools/c7n_gcp/: development.md  pyproject.toml  readme.md
modules/cloud-custodian/tools/c7n_guardian/: setup.py
modules/cloud-custodian/tools/c7n_kube/: .tool-versions  justfile  pyproject.toml  readme.md  skaffold.yaml
modules/cloud-custodian/tools/c7n_left/: README.md  notes.md  pyproject.toml
modules/cloud-custodian/tools/c7n_logexporter/: README.md  pyproject.toml
modules/cloud-custodian/tools/c7n_mailer/: README-docker.md  README.md  example.yml  pyproject.toml
modules/cloud-custodian/tools/c7n_oci/: .gitignore  MANIFEST.in  pyproject.toml  readme.md  requirements.txt
modules/cloud-custodian/tools/c7n_openstack/: pyproject.toml  readme.md
modules/cloud-custodian/tools/c7n_org/: Dockerfile  README.md  pyproject.toml
modules/cloud-custodian/tools/c7n_policystream/: README.md  policystream.py  pyproject.toml
modules/cloud-custodian/tools/c7n_salactus/: requirements.txt
modules/cloud-custodian/tools/c7n_sentry/: test_sentry.py
modules/cloud-custodian/tools/c7n_sphinxext/: pyproject.toml
modules/cloud-custodian/tools/c7n_tencentcloud/: pyproject.toml  readme.md
modules/cloud-custodian/tools/c7n_terraform/: pyproject.toml  readme.md
modules/cloud-custodian/tools/c7n_trailcreator/: pyproject.toml  readme.md
modules/cloud-custodian/tools/cask/: Makefile  go.mod  go.sum  main.go  readme.md
modules/cloud-custodian/tools/dev/: arnref.py  changelog.py  data_cftypedb.py  data_gcpiamdb.py  data_gcpregion.py  data_iamdb.py  data_updatearnref.py  dependency-sort.py  devpkg.py  dockerpkg.py  freezeuvwheel.py  gcpregion.py  get_release_artifacts.py  license-check.py  lint_version.py  poetrypkg.py  prcheck.py  readme-vector.md  staging-auth.sh  staging-clean.py  vector.toml
modules/cloud-custodian/tools/omnissm/: go.mod  go.sum
modules/cloud-custodian/tools/ops/: aws-iam-gen.py  logsetup.py  mugc.py  policylambda.py  policyrename.py
(+4903 files in other folders)
