[tool.poetry]
name = "c7n"
version = "0.9.44"
description = "Cloud Custodian - Policy Rules Engine"
authors = ["Cloud Custodian Project"]
readme = "README.md"
homepage = "https://cloudcustodian.io"
documentation = "https://cloudcustodian.io/docs"
repository = "https://github.com/cloud-custodian/cloud-custodian"
license = "Apache-2.0"
packages = [
    { include = "c7n" }]
classifiers=[
   "License :: OSI Approved :: Apache Software License",
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cloud-custodian/cloud-custodian/issues"

[tool.poetry.scripts]
custodian = 'c7n.cli:main'

[tool.poetry.dependencies]
python = ">=3.9.2,<4.0.0"
cryptography = ">=44"
boto3 = "^1.12.31"
jsonschema = ">=4.18"
argcomplete = ">=1.12.3"
python-dateutil = "^2.8.2"
pyyaml = ">=5.4.0"
tabulate = "^0.9.0"
docutils = ">=0.18, <0.19"
# workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
urllib3 = ">=1.25.4,<1.27"
# workaround for: https://github.com/pypa/setuptools/issues/4956
setuptools = "<79"

[tool.poetry.group.dev.dependencies]

ruff = "~0.11"
docker = {extras = ["websockets"], version = "^7.1.0"}
black = ">=23.1,<25.0"
pytest = "<8"
coverage = "^7"
placebo = "^0"
pytest-xdist = "^3.0"
pytest-cov = ">=3,<6"
pytest-terraform = ">=0.6,<0.8"
vcrpy = ">=4.0.2"
twine = ">=3.1.1,<6.0.0"
pytest-sugar = ">=0.9.2,<1.1.0"
click = "^8.0"
freezegun = "^1.2.2"
pytest-recording = ">=0.12.1,<0.14.0"
moto = "^5.0"
openapi-spec-validator = "^0.7.1"

[tool.poetry.group.addons]
optional = true

[tool.poetry.group.addons.dependencies]

aws-xray-sdk = "^2.14"
jsonpatch = "^1.25"
psutil = ">=5.7"

[tool.black]
skip-string-normalization = true
line-length = 100

[tool.ruff]
line-length = 100
exclude = ["__init__.py"]

[tool.ruff.lint]
preview = true
select = ["E", "F", "W"]
# E741 - single char variables
# E401 - multiple imports in a single line
ignore = ["E741", "E401"]

[tool.pytest.ini_options]
junit_family = "xunit2"
addopts = "--tb=native"
markers = ["functional", "skiplive", "audited"]
python_files = "test_*.py"
norecursedirs = ["data", "cassettes", "templates", "terraform"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
