[project]
authors = [
    {name = "Cloud Custodian Project"},
]
license = "Apache-2.0"
requires-python = "<4.0.0,>=3.9.2"
dependencies = [
    "boto3",
    "c7n",
    "jsonpatch<2.0,>=1.32",
]
name = "c7n_awscc"
version = "0.1.31"
readme = "readme.md"
description = "Cloud Custodian - AWS Cloud Control Provider"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
documentation = "https://cloudcustodian.io/docs/"

[dependency-groups]
dev = [
    "pytest<8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "build.py"
dependencies = ["boto3", "requests"]
