[tool.poetry]
name = "c7n_azure"
version = "0.7.41"
description = "Cloud Custodian - Azure Support"
readme = "readme.md"
homepage="https://cloudcustodian.io"
repository="https://github.com/cloud-custodian/cloud-custodian"
documentation="https://cloudcustodian.io/docs/"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"
classifiers=[
   "License :: OSI Approved :: Apache Software License",
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]

[tool.poetry.dependencies]
python = "^3.8"
c7n = {path = "../..", develop = true}

azure-mgmt-authorization = "^1.0.0"
azure-mgmt-advisor = "^9.0.0"
azure-mgmt-apimanagement = "^1.0.0"
azure-mgmt-appconfiguration = "0.7.0"
azure-mgmt-applicationinsights = "^1.0.0"
azure-mgmt-automation = "0.1.1"
azure-mgmt-batch = "^15.0.0"
azure-mgmt-cognitiveservices = "^11.0.0"
azure-mgmt-cosmosdb = "^6.1.0"
azure-mgmt-costmanagement = "^1.0.0"
azure-mgmt-containerinstance = "^7.0.0"
azure-mgmt-compute = "^19.0.0"
azure-mgmt-cdn = "^12.0.0"
azure-mgmt-containerregistry = "^10.3.0"
azure-mgmt-containerservice = "^15.0.0"
azure-mgmt-databricks = "1.0.0b1"
azure-mgmt-datalake-analytics = "^0.5.0"
azure-mgmt-datalake-store = "^0.5.0"
azure-mgmt-datafactory = "^1.0.0"
azure-mgmt-desktopvirtualization = "^1.0.0"
azure-mgmt-dns = "8.0.0b1"
azure-mgmt-eventgrid = "^10.3.0b4"
azure-mgmt-eventhub = "^11.0.0"
azure-mgmt-hdinsight = "^7.0.0"
azure-mgmt-iothub = "^1.0.0"
azure-mgmt-keyvault = "^8.0.0"
azure-mgmt-kusto = "^2.2.0"
azure-mgmt-machinelearningservices = "2.0.0b2"
azure-mgmt-managementgroups = "1.0.0b1"
azure-mgmt-network = "^28.0.0"
azure-mgmt-redhatopenshift = "^1.2.0"
azure-mgmt-resourcegraph = "^7.0.0"
azure-mgmt-resource = "^16.0.0"
azure-mgmt-rdbms = "10.2.0b17"
azure-mgmt-search = "^8.0.0"
azure-mgmt-sql = "^1.0.0"
azure-mgmt-storage = "^17.0.0"
azure-mgmt-streamanalytics = "^1.0.0rc1"
azure-mgmt-subscription = "^1.0.0"
azure-mgmt-web = "^3.0.0"
azure-mgmt-logic = "^9.0.0"
azure-storage-blob = "^12.8.0"
azure-storage-queue = "^12.1.5"
azure-cosmosdb-table = "^1.0.6"
applicationinsights = "^0.11.9"
apscheduler = "^3.6.3"
distlib = "^0.3.0"
PyJWT = ">=1.7.1,<3.0.0"
adal = "^1.2.6"
requests = "^2.22.0"
azure-functions = { version = "^1.0.8", python = "~3" }
azure-graphrbac = "^0.61.1"
netaddr = "^0.7.19"
azure-storage-file = "^2.1.0"
azure-mgmt-policyinsights = "^1.0.0"
azure-mgmt-monitor = "^2.0.0"
click = "^8.0"
azure-cosmos = "^3.1.2"
azure-mgmt-redis = "^12.0.0"
azure-keyvault-secrets = "^4.2.0"
azure-keyvault-keys = "^4.3.1"
azure-keyvault-certificates = "^4.2.1"
azure-identity = "^1.5.0"
azure-keyvault = "^4.1.0"
azure-storage-file-share = "^12.4.1"
cryptography = ">=3.4.6"
azure-mgmt-msi = "^1.0.0"
jmespath = "^1.0.0"
azure-mgmt-servicefabric = "^1.0.0"
azure-mgmt-trafficmanager = "^0.51.0"
azure-mgmt-frontdoor = "^1.0.0"
azure-mgmt-security = "^1.0.0"
azure-mgmt-servicebus = "^8.2.0"
azure-mgmt-appplatform = "^8.0.0"
azure-mgmt-recoveryservices = "^2.4.0"
azure-mgmt-signalr = "0.4.0"
azure-mgmt-synapse = "^2.0.0"
azure-mgmt-recoveryservicesbackup = "^7.0.0"

[tool.poetry.group.dev.dependencies]
vcrpy-unittest = ">=0.1.7"
parameterized = ">=0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
