[project]
authors = [
    {name = "Cloud Custodian Project"},
]
license = "Apache-2.0"
requires-python = "<4.0.0,>=3.9.2"
dependencies = [
    "PyJWT<3.0.0,>=1.7.1",
    "adal<2.0.0,>=1.2.6",
    "applicationinsights<1.0.0,>=0.11.9",
    "apscheduler<4.0.0,>=3.6.3",
    "azure-cosmos<4.0.0,>=3.1.2",
    "azure-cosmosdb-table<2.0.0,>=1.0.6",
    "azure-functions<2.0.0,>=1.0.8",
    "azure-graphrbac<1.0.0,>=0.61.1",
    "azure-identity<2.0.0,>=1.5.0",
    "azure-keyvault<5.0.0,>=4.1.0",
    "azure-keyvault-certificates<5.0.0,>=4.2.1",
    "azure-keyvault-keys<5.0.0,>=4.3.1",
    "azure-keyvault-secrets<5.0.0,>=4.2.0",
    "azure-mgmt-advisor<10.0.0,>=9.0.0",
    "azure-mgmt-apimanagement<2.0.0,>=1.0.0",
    "azure-mgmt-appconfiguration==0.7.0",
    "azure-mgmt-applicationinsights<2.0.0,>=1.0.0",
    "azure-mgmt-appplatform<9.0.0,>=8.0.0",
    "azure-mgmt-authorization<2.0.0,>=1.0.0",
    "azure-mgmt-automation==0.1.1",
    "azure-mgmt-batch<16.0.0,>=15.0.0",
    "azure-mgmt-cdn<13.0.0,>=12.0.0",
    "azure-mgmt-cognitiveservices<12.0.0,>=11.0.0",
    "azure-mgmt-compute<30.0.0,>=29.1.0",
    "azure-mgmt-containerinstance<8.0.0,>=7.0.0",
    "azure-mgmt-containerregistry<15.0.0,>=14.0.0",
    "azure-mgmt-containerservice<16.0.0,>=15.0.0",
    "azure-mgmt-cosmosdb<7.0.0,>=6.1.0",
    "azure-mgmt-costmanagement<2.0.0,>=1.0.0",
    "azure-mgmt-databricks==1.0.0b1",
    "azure-mgmt-datafactory<2.0.0,>=1.0.0",
    "azure-mgmt-datalake-analytics<1.0.0,>=0.5.0",
    "azure-mgmt-datalake-store<1.0.0,>=0.5.0",
    "azure-mgmt-desktopvirtualization<2.0.0,>=1.0.0",
    "azure-mgmt-dns==8.0.0b1",
    "azure-mgmt-eventgrid<11.0.0,>=10.3.0b4",
    "azure-mgmt-eventhub<12.0.0,>=11.0.0",
    "azure-mgmt-frontdoor<2.0.0,>=1.0.0",
    "azure-mgmt-hdinsight<8.0.0,>=7.0.0",
    "azure-mgmt-iothub<2.0.0,>=1.0.0",
    "azure-mgmt-keyvault<9.0.0,>=8.0.0",
    "azure-mgmt-kusto<3.0.0,>=2.2.0",
    "azure-mgmt-logic<10.0.0,>=9.0.0",
    "azure-mgmt-machinelearningservices==2.0.0b2",
    "azure-mgmt-managementgroups==1.0.0b1",
    "azure-mgmt-monitor<3.0.0,>=2.0.0",
    "azure-mgmt-msi<2.0.0,>=1.0.0",
    "azure-mgmt-network<29.0.0,>=28.0.0",
    "azure-mgmt-policyinsights<2.0.0,>=1.0.0",
    "azure-mgmt-rdbms==10.2.0b17",
    "azure-mgmt-recoveryservices<3.0.0,>=2.4.0",
    "azure-mgmt-recoveryservicesbackup<8.0.0,>=7.0.0",
    "azure-mgmt-redhatopenshift<2.0.0,>=1.2.0",
    "azure-mgmt-redis<15.0.0,>=14.5.0",
    "azure-mgmt-resource<24.0.0,>=23.0.0",
    "azure-mgmt-resourcegraph<8.0.0,>=7.0.0",
    "azure-mgmt-search<9.0.0,>=8.0.0",
    "azure-mgmt-security<8.0.0,>=7.0.0",
    "azure-mgmt-servicebus<9.0.0,>=8.2.0",
    "azure-mgmt-servicefabric<2.0.0,>=1.0.0",
    "azure-mgmt-signalr==0.4.0",
    "azure-mgmt-sql<2.0.0,>=1.0.0",
    "azure-mgmt-storage<23.0.0,>=22.1.1",
    "azure-mgmt-streamanalytics<2.0.0,>=1.0.0rc1",
    "azure-mgmt-subscription<2.0.0,>=1.0.0",
    "azure-mgmt-synapse<3.0.0,>=2.0.0",
    "azure-mgmt-trafficmanager<1.0.0,>=0.51.0",
    "azure-mgmt-web<4.0.0,>=3.0.0",
    "azure-storage-blob<13.0.0,>=12.8.0",
    "azure-storage-file<3.0.0,>=2.1.0",
    "azure-storage-file-share<13.0.0,>=12.4.1",
    "azure-storage-queue<13.0.0,>=12.1.5",
    "c7n",
    "click<9.0,>=8.0",
    "cryptography>=3.4.6",
    "distlib<1.0.0,>=0.3.0",
    "jmespath<2.0.0,>=1.0.0",
    "netaddr<1.0.0,>=0.7.19",
    "requests<3.0.0,>=2.22.0",
]
name = "c7n_azure"
version = "0.7.44"
description = "Cloud Custodian - Azure Support"
readme = "readme.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
documentation = "https://cloudcustodian.io/docs/"

[dependency-groups]
dev = [
    "parameterized>=0.7.1",
    "vcrpy-unittest>=0.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
