[tool.poetry]
name = "c7n_gcp"
version = "0.4.37"
description = "Cloud Custodian - Google Cloud Provider"
readme = "readme.md"
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
documentation = "https://cloudcustodian.io/docs/"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"
classifiers = [
   "License :: OSI Approved :: Apache Software License",
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]

[tool.poetry.dependencies]
python = "^3.8"
c7n = {path = "../..", develop = true}

retrying = "^1.3.3"
google-api-python-client = "^2.0"
google-cloud-logging = "^3.2"
google-auth = "^2.1.0"
google-cloud-monitoring = "^2.5.0"
google-cloud-storage = "^2.7"
pyrate-limiter = "^2.8.4"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.2.2"
pytest = "^7.1.2"
pytest-terraform = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
