[project]
authors = [
    {name = "Cloud Custodian Project"},
]
license = "Apache-2.0"
requires-python = "<4.0.0,>=3.9.2"
dependencies = [
    "c7n",
    "jsonpatch<2.0,>=1.32",
    "kubernetes>=10.0.1",
]
name = "c7n_kube"
version = "0.2.46"
description = "Cloud Custodian - Kubernetes Provider"
readme = "readme.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
documentation = "https://cloudcustodian.io/docs/"

[project.scripts]
c7n-kube = "c7n_kube.cli:cli"

[dependency-groups]
dev = [
    "pytest<8.0",
    "vcrpy>=4.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
