[tool.poetry]
name = "c7n_logexporter"
version = "0.4.39"
description = "Cloud Custodian - Cloud Watch Log S3 exporter"
readme = "README.md"
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
documentation = "https://cloudcustodian.io/docs/"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"
classifiers = [
   "License :: OSI Approved :: Apache Software License",
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]

[tool.poetry.scripts]
c7n-log-exporter = 'c7n_logexporter.exporter:cli'

[tool.poetry.dependencies]
python = "^3.8"
c7n = {path = "../..", develop = true}

click = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

