[project]
authors = [
    {name = "Cloud Custodian Project"},
]
license = "Apache-2.0"
requires-python = "<4.0.0,>=3.9.2"
dependencies = [
    "Jinja2<4.0,>=3.0",
    "boto3>=1.11.12",
    "datadog<1.0.0,>=0.34.0",
    "importlib-metadata<9.0,>=8.0",
    "jsonpatch<2.0,>=1.25",
    "jsonpointer>=2.0",
    "jsonschema>=4.18",
    "ldap3<3.0.0,>=2.6.1",
    "python-dateutil<3.0.0,>=2.8.1",
    "pyyaml>=5.4.0",
    "redis<6.0,>=5.0",
    "sendgrid<7.0.0,>=6.1.1",
    "types-six<2.0.0,>=1.16.10",
]
name = "c7n_mailer"
version = "0.6.44"
description = "Cloud Custodian - Reference Mailer"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
documentation = "https://cloudcustodian.io/docs/"

[project.optional-dependencies]
gcp = [
    "c7n_gcp",
    "google-cloud-secret-manager<3.0.0,>=2.8.0",
]
azure = [
    "c7n_azure",
]

[tool.uv.sources]
c7n_azure = { workspace = true }
c7n_gcp = { workspace = true }

[project.scripts]
c7n-mailer = "c7n_mailer.cli:main"
c7n-mailer-replay = "c7n_mailer.replay:main"

[dependency-groups]
dev = [
    "black<25.0,>=23.1",
    "fakeredis<3.0,>=2.0",
    "mypy<1.0,>=0.931",
    "pytest<8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"