[tool.poetry]
name = "c7n_oci"
version = "0.1.13"
description = "Cloud Custodian - OCI Support"
readme = "readme.md"
homepage="https://cloudcustodian.io"
repository="https://github.com/cloud-custodian/cloud-custodian"
documentation="https://cloudcustodian.io/docs/"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"
classifiers=[
   "License :: OSI Approved :: Apache Software License",
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]

[tool.poetry.dependencies]
python = "^3.8"
oci = "^2.106"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
