[project]
authors = [
    {name = "Cloud Custodian Project"},
]
license = {text = "Apache-2.0"}
requires-python = "<4.0.0,>=3.9.2"
dependencies = [
    "c7n",
    "oci<3.0,>=2.106",
    # uv hint: else it will for some reason downgrade pyopenssl for
    # reasons not apparent, without an dependency spec precluding
    # older versions.
    "pyopenssl>=24"
]
name = "c7n_oci"
version = "0.1.20"
description = "Cloud Custodian - OCI Support"
readme = "readme.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Distributed Computing",
]


[project.urls]
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
documentation = "https://cloudcustodian.io/docs/"

[dependency-groups]
dev = [
    "pytest<8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["c7n_oci"]
