[project]
authors = [
    {name = "Cloud Custodian Project"},
]
license = "Apache-2.0"
requires-python = "<4.0.0,>=3.9.2"
dependencies = [
    "c7n",
    "openstacksdk==0.52.0",
]
name = "c7n_openstack"
version = "0.1.35"
description = "Cloud Custodian - OpenStack Provider"
readme = "readme.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
documentation = "https://cloudcustodian.io/docs/"

[dependency-groups]
dev = [
    "pytest<8.0",
    "vcrpy>=4.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
