[tool.poetry]
name = "c7n_policystream"
version = "0.4.36"
description = "Cloud Custodian - Git Commits as Logical Policy Changes"
readme = "README.md"
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
documentation = "https://cloudcustodian.io/docs/"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"
classifiers = [
   "License :: OSI Approved :: Apache Software License",
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]
packages = [{"include" = "policystream.py"}]

[tool.poetry.scripts]
c7n-policystream = 'policystream:cli'

[tool.poetry.dependencies]
python = "^3.8"
c7n = {path = "../..", develop = true}

click = "^8.0"
pyyaml = ">=5.4.0"
pygit2 = ">=1.11"
boto3 = "^1.12.0"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mock = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
