[tool.poetry]
name = "c7n_sphinxext"
version = "1.1.42"
description = "Cloud Custodian - Sphinx Extensions"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"
homepage = "https://cloudcustodian.io"
documentation = "https://cloudcustodian.io/docs"
repository = "https://github.com/cloud-custodian/cloud-custodian"
classifiers=[
   "License :: OSI Approved :: Apache Software License",
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]
readme = "README.md"

[tool.poetry.scripts]
c7n-sphinxext = 'c7n_sphinxext.docgen:main'

[tool.poetry.dependencies]
python = "^3.8"
c7n = {path = "../..", develop = true}

Sphinx = "^7.0"
Pygments = ">=2.10.0"
sphinx-rtd-theme = ">=1.0.0"
recommonmark = ">=0.7.0"
sphinx_markdown_tables = ">=0.0.12"
myst-parser = ">=0.18"
click = ">=8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
