[project]
authors = [
    {name = "Cloud Custodian Project"},
]
license = "Apache-2.0"
requires-python = "<4.0.0,>=3.9.2"
dependencies = [
    "Pygments>=2.10.0",
    "Sphinx<8.0,>=7.0",
    "c7n",
    "click>=8.0",
    "myst-parser>=0.18",
    "recommonmark>=0.7.0",
    "sphinx-markdown-tables>=0.0.12",
    "sphinx-rtd-theme>=1.0.0",
]
name = "c7n_sphinxext"
version = "1.1.44"
description = "Cloud Custodian - Sphinx Extensions"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Distributed Computing",
]
readme = "README.md"

[project.urls]
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
documentation = "https://cloudcustodian.io/docs"

[project.scripts]
c7n-sphinxext = "c7n_sphinxext.docgen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
