[tool.poetry]
name = "c7n_tencentcloud"
version = "0.1.21"
description = "Cloud Custodian - Tencent Cloud Provider"
authors = ["Tencent Cloud"]
license = "Apache-2.0"
homepage = "https://cloudcustodian.io"
documentation = "https://cloudcustodian.io/docs"
readme = "readme.md"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cloud-custodian/cloud-custodian/issues"

[tool.poetry.dependencies]
python = "^3.8"
c7n = {path = "../..", develop = true}

pytz = ">=2022.1"
retrying = "^1.3.3"
tencentcloud-sdk-python = "^3.0.783"
cos-python-sdk-v5 = "^1.9.21"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
