[project]
authors = [
    {name = "Cloud Custodian Project"},
]
license = "Apache-2.0"
requires-python = "<4.0.0,>=3.9.2"
dependencies = [
    "c7n",
    "click<9.0,>=8.0",
    "python-hcl2<5.0.0,>=4.3.2",
]
name = "c7n_terraform"
version = "0.1.35"
readme = "readme.md"
description = "Cloud Custodian Provider for evaluating Terraform"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
documentation = "https://cloudcustodian.io/docs/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"